create account and password fixed bug
